# oracle-dmp-converter

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: config.yaml.example
scripts/: create_complex_sample_dump.py  create_full_combined_dump.py  create_legacy_exp_sample.py  verify_legacy_subpartition_import.py  vpd_experiment.py
src/dmp_to_parquet/: __init__.py  cli.py  config.py  converter.py  datapump.py  docker_oracle.py  errors.py  exporter.py  metadata.py  models.py  oracle_conn.py  oracle_types.py  parfile.py  planner.py  serialization.py  sqlfile.py  state.py  validation.py
src/dmp_to_parquet/datapump/: imp_show.py  legacy_parfile.py  parfile.py  runner.py  sqlfile.py
src/dmp_to_parquet/io/: serialization.py  state.py  validation.py
src/dmp_to_parquet/oracle/: conn.py  exporter.py  identifiers.py  metadata.py  types.py
src/oracle_dmp_converter/: __init__.py  cli.py  config.py  converter.py  docker_oracle.py  errors.py  models.py  planner.py  settings.py
src/oracle_dmp_converter/cli/: __init__.py  commands.py  main.py
src/oracle_dmp_converter/core/: __init__.py  executor.py  results.py  staging.py
src/oracle_dmp_converter/datapump/: __init__.py  _base_runner.py  _ddl_parser.py  _exit_policy.py  _workflow_base.py  error_parser.py  imp_show.py  legacy_parfile.py  parfile.py  runner.py  sqlfile.py  workflow.py
src/oracle_dmp_converter/io/: __init__.py  report.py  serialization.py  state.py  validation.py
src/oracle_dmp_converter/oracle/: __init__.py  conn.py  constants.py  exporter.py  format_writer.py  identifiers.py  metadata.py  omf.py  types.py
src/oracle_dmp_converter/persistence/: __init__.py  report.py  serialization.py  state.py  validation.py
src/oracle_dmp_converter/runtime/: __init__.py  admin.py  container_manager.py  container_oracle.py  session.py
tests/data/: dmp2parquet-discovery.sql  legacy.dmp  modern.dmp
tests/integration/: conftest.py  test_cli_workflow.py  test_data_legacy_dump.py  test_data_modern_dump.py  test_full_combined_dump.py  test_legacy_bug_fixes.py  test_legacy_exp_roundtrip.py  test_oracle_datapump_roundtrip.py
tests/unit/: conftest.py  test_cli_commands.py  test_cli_proxy.py  test_config.py  test_container_oracle_reconnect.py  test_converter.py  test_converter_facade.py  test_docker_oracle_reconnect.py  test_executor_extras.py  test_exporter.py  test_format_writer.py  test_identifiers.py  test_imp_show.py  test_legacy_parfile.py  test_models.py  test_oracle_types.py  test_parfile.py  test_planner.py  test_safe_stop_container.py  test_serialization.py  test_sqlfile.py  test_staging_executor.py  test_state.py
tests/unit/core/: test_results.py  test_staging.py
tests/unit/datapump/: test_base_runner.py  test_ddl_parser.py  test_error_parser.py  test_workflow.py  test_workflow_base.py
tests/unit/io/: test_serialization.py
(+36 files in other folders)
