[project]
name = "oracle-dmp-converter"
version = "0.3.0"
description = "Convert Oracle Data Pump dumps to Parquet, Avro, or CSV through Oracle Free staging."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.1.8",
    "docker>=7.1.0",
    "fastavro>=1.9.0",
    "oracledb>=2.5.1",
    "pyarrow>=18.1.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
oracle-dmp-converter = "oracle_dmp_converter.cli:main"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "integration: tests that require Docker and Oracle Free",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pylint.main]
py-version = "3.12"
source-roots = ["src", "scripts", "tests"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "duplicate-code",
    "fixme",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-return-statements",
]
